// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should convert complex sql account-levelisations.query.sql: account-levelisations.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 1661,
      "name": "q",
      "pick": Array [],
      "pos": 1605,
      "required": false,
      "spread": false,
      "type": "string",
    },
    Object {
      "lastPos": 1788,
      "name": "levelisationId",
      "pick": Array [],
      "pos": 1706,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "levelisation_id",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "lastPos": 1910,
      "name": "ids",
      "pick": Array [],
      "pos": 1805,
      "required": false,
      "spread": false,
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
    Object {
      "lastPos": 1942,
      "name": "sortField",
      "pick": Array [],
      "pos": 1931,
      "required": false,
      "spread": false,
      "type": "string",
    },
    Object {
      "lastPos": 1970,
      "name": "sortOrder",
      "pick": Array [],
      "pos": 1959,
      "required": false,
      "spread": false,
      "type": "string",
    },
    Object {
      "lastPos": 2581,
      "name": "limit",
      "pick": Array [],
      "pos": 2575,
      "required": false,
      "spread": false,
      "type": "number",
    },
    Object {
      "lastPos": 2601,
      "name": "offset",
      "pick": Array [],
      "pos": 2594,
      "required": false,
      "spread": false,
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "levelisationId",
      "type": Object {
        "column": "levelisation_id",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "accountId",
      "type": Object {
        "column": "account_id",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "installationId",
      "type": Object {
        "column": "installation_id",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "column": "state",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "isAccepted",
      "type": Object {
        "column": "is_accepted",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "generationStartReadOn",
      "type": Object {
        "column": "generation_start_read_on",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "generationStartReadValue",
      "type": Object {
        "column": "generation_start_read_value",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "generationEndReadOn",
      "type": Object {
        "column": "generation_end_read_on",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "generationEndReadValue",
      "type": Object {
        "column": "generation_end_read_value",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "generationPercentageSplit",
      "type": Object {
        "column": "generation_percentage_split",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "generationPayment",
      "type": Object {
        "column": "generation_payment",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "generationEnergy",
      "type": Object {
        "column": "generation_energy",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "exportStartReadOn",
      "type": Object {
        "column": "export_start_read_on",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "exportStartReadValue",
      "type": Object {
        "column": "export_start_read_value",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "exportEndReadOn",
      "type": Object {
        "column": "export_end_read_on",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "exportEndReadValue",
      "type": Object {
        "column": "export_end_read_value",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "exportPercentageSplit",
      "type": Object {
        "column": "export_percentage_split",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "exportPayment",
      "type": Object {
        "column": "export_payment",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "exportEnergy",
      "type": Object {
        "column": "export_energy",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "totalPayment",
      "type": Object {
        "column": "total_payment",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "vatPayment",
      "type": Object {
        "column": "vat_payment",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
    Object {
      "name": "cfrFitId",
      "type": Object {
        "column": "scheme_account_reference",
        "schema": "public",
        "table": "contracts",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql account-levelisations-set-bulk-update.query.sql: account-levelisations-set-bulk-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 542,
      "name": "ids",
      "pick": Array [],
      "pos": 529,
      "required": false,
      "spread": false,
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": "public",
        "table": "account_levelisations",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql accounts.query.sql: accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 2255,
      "name": "q",
      "pick": Array [],
      "pos": 1192,
      "required": false,
      "spread": false,
      "type": "string",
    },
    Object {
      "lastPos": 2329,
      "name": "ids",
      "pick": Array [],
      "pos": 2272,
      "required": false,
      "spread": false,
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
    Object {
      "lastPos": 2634,
      "name": "limit",
      "pick": Array [],
      "pos": 2628,
      "required": false,
      "spread": false,
      "type": "number",
    },
    Object {
      "lastPos": 2654,
      "name": "offset",
      "pick": Array [],
      "pos": 2647,
      "required": false,
      "spread": false,
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "column": "state",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "column": "start_on",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
    Object {
      "name": "firstName",
      "type": Object {
        "column": "first_name",
        "schema": "public",
        "table": "contacts",
        "type": "column",
      },
    },
    Object {
      "name": "lastName",
      "type": Object {
        "column": "last_name",
        "schema": "public",
        "table": "contacts",
        "type": "column",
      },
    },
    Object {
      "name": "email",
      "type": Object {
        "column": "email",
        "schema": "public",
        "table": "contacts",
        "type": "column",
      },
    },
    Object {
      "name": "address",
      "type": Object {
        "args": Array [
          Object {
            "column": "address_line_1",
            "schema": "public",
            "table": "installation_addresses",
            "type": "column",
          },
          Object {
            "column": "address_line_2",
            "schema": "public",
            "table": "installation_addresses",
            "type": "column",
          },
          Object {
            "column": "city",
            "schema": "public",
            "table": "installation_addresses",
            "type": "column",
          },
          Object {
            "column": "postcode",
            "schema": "public",
            "table": "installation_addresses",
            "type": "column",
          },
        ],
        "name": "concat_ws",
        "type": "function",
      },
    },
    Object {
      "name": "fitIds",
      "type": Object {
        "args": Array [
          Object {
            "column": "scheme_account_reference",
            "schema": "public",
            "table": "contracts",
            "type": "column",
          },
        ],
        "name": "array_agg",
        "type": "function",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql accounts.sql: accounts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Query Interface Should convert complex sql bacs.query.sql: bacs.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 620,
      "name": "quarter",
      "pick": Array [],
      "pos": 611,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "levelisation_reference",
        "schema": "public",
        "table": "payments",
        "type": "column",
      },
    },
    Object {
      "lastPos": 635,
      "name": "perPage",
      "pick": Array [],
      "pos": 626,
      "required": false,
      "spread": false,
      "type": "string",
    },
    Object {
      "lastPos": 650,
      "name": "offset",
      "pick": Array [],
      "pos": 642,
      "required": false,
      "spread": false,
      "type": "string",
    },
  ],
  "result": Array [
    Object {
      "name": "fitId",
      "type": Object {
        "column": "fit_reference",
        "schema": "public",
        "table": "payments",
        "type": "column",
      },
    },
    Object {
      "name": "name",
      "type": Object {
        "column": "beneficiary_name",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
    Object {
      "name": "amount",
      "type": Object {
        "column": "amount",
        "schema": "public",
        "table": "payments",
        "type": "column",
      },
    },
    Object {
      "name": "quarter",
      "type": Object {
        "column": "levelisation_reference",
        "schema": "public",
        "table": "payments",
        "type": "column",
      },
    },
    Object {
      "name": "bankDetails",
      "type": Object {
        "args": Array [
          Object {
            "column": "beneficiary_sort_code",
            "schema": "public",
            "table": "a",
            "type": "column",
          },
          Object {
            "column": "beneficiary_account_number",
            "schema": "public",
            "table": "a",
            "type": "column",
          },
        ],
        "name": "concat",
        "type": "function",
      },
    },
    Object {
      "name": "addressLine1",
      "type": Object {
        "column": "address_line_1",
        "schema": "public",
        "table": "addresses",
        "type": "column",
      },
    },
    Object {
      "name": "addressLine2",
      "type": Object {
        "column": "address_line_2",
        "schema": "public",
        "table": "addresses",
        "type": "column",
      },
    },
    Object {
      "name": "addressLine3",
      "type": Object {
        "column": "address_line_3",
        "schema": "public",
        "table": "addresses",
        "type": "column",
      },
    },
    Object {
      "name": "postcode",
      "type": Object {
        "column": "postcode",
        "schema": "public",
        "table": "addresses",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql contracts.sql: contracts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Query Interface Should convert complex sql delete-accounts.query.sql: delete-accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 263,
      "name": "type",
      "pick": Array [],
      "pos": 251,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "scheme_type",
        "schema": "public",
        "table": "contracts",
        "type": "column",
      },
    },
    Object {
      "lastPos": 291,
      "name": "state",
      "pick": Array [],
      "pos": 284,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "state",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "column": "source_system_id",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
    Object {
      "name": "customerId",
      "type": Object {
        "column": "customer_id",
        "schema": "public",
        "table": "accounts",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql generation-read-data.query.sql: generation-read-data.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 223,
      "name": "installationId",
      "pick": Array [],
      "pos": 205,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "installation_id",
        "schema": "public",
        "table": "installation_meters",
        "type": "column",
      },
    },
    Object {
      "lastPos": 454,
      "name": "exportDateOn",
      "pick": Array [],
      "pos": 429,
      "required": false,
      "spread": false,
      "type": "Date",
    },
  ],
  "result": Array [
    Object {
      "name": "dateOn",
      "type": Object {
        "column": "date_on",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "column": "value",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql installation-meter-update.query.sql: installation-meter-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 98,
      "name": "meterId",
      "pick": Array [],
      "pos": 89,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "meter_id",
        "schema": "public",
        "table": "installation_meters",
        "type": "column",
      },
    },
    Object {
      "lastPos": 53,
      "name": "removalDate",
      "pick": Array [],
      "pos": 40,
      "required": false,
      "spread": false,
      "type": "unknown",
    },
  ],
  "result": Array [],
}
`;

exports[`Query Interface Should convert complex sql installations.sql: installations.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Query Interface Should convert complex sql meter-reads.sql: meter-reads.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Query Interface Should convert complex sql rates-by-tarrif-ids.query.sql: rates-by-tarrif-ids.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 320,
      "name": "ids",
      "pick": Array [],
      "pos": 314,
      "required": false,
      "spread": true,
      "type": Object {
        "column": "id",
        "schema": "public",
        "table": "tariffs",
        "type": "column",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "tariffId",
      "type": Object {
        "column": "tariff_id",
        "schema": "public",
        "table": "tariff_rates",
        "type": "column",
      },
    },
    Object {
      "name": "rate",
      "type": Object {
        "column": "rate",
        "schema": "public",
        "table": "tariff_rates",
        "type": "column",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "column": "start_date_on",
        "schema": "public",
        "table": "tariff_rates",
        "type": "column",
      },
    },
    Object {
      "name": "tariffCode",
      "type": Object {
        "column": "code",
        "schema": "public",
        "table": "tariffs",
        "type": "column",
      },
    },
    Object {
      "name": "tariffType",
      "type": Object {
        "column": "type",
        "schema": "public",
        "table": "tariffs",
        "type": "column",
      },
    },
    Object {
      "name": "endOn",
      "type": Object {
        "column": "end_date_on",
        "schema": "public",
        "table": "tariff_rates",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql read-create.query.sql: read-create.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 215,
      "name": "meterId",
      "pick": Array [],
      "pos": 92,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "meter_id",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "lastPos": 215,
      "name": "reason",
      "pick": Array [],
      "pos": 102,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "reason",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "lastPos": 215,
      "name": "type",
      "pick": Array [],
      "pos": 111,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "type",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "lastPos": 215,
      "name": "dateOn",
      "pick": Array [],
      "pos": 127,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "date_on",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "lastPos": 215,
      "name": "submittedAt",
      "pick": Array [],
      "pos": 160,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "submitted_at",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "lastPos": 215,
      "name": "value",
      "pick": Array [],
      "pos": 198,
      "required": false,
      "spread": false,
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "column": "value",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "column": "meter_id",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "submittedAt",
      "type": Object {
        "column": "submitted_at",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql reads-by-account-id.query.sql: reads-by-account-id.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "lastPos": 597,
      "name": "id",
      "pick": Array [],
      "pos": 593,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "account_id",
        "schema": "public",
        "table": "contracts",
        "type": "column",
      },
    },
    Object {
      "lastPos": 632,
      "name": "offset",
      "pick": Array [],
      "pos": 624,
      "required": false,
      "spread": false,
      "type": "string",
    },
    Object {
      "lastPos": 647,
      "name": "perPage",
      "pick": Array [],
      "pos": 638,
      "required": false,
      "spread": false,
      "type": "string",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "msn",
      "type": Object {
        "column": "serial_number",
        "schema": "public",
        "table": "meters",
        "type": "column",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "column": "meter_id",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "dateOn",
      "type": Object {
        "column": "date_on",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "column": "value",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "column": "type",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "column": "reason",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "createdAt",
      "type": Object {
        "column": "created_at",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "updatedAt",
      "type": Object {
        "column": "updated_at",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "column": "source_system_id",
        "schema": "public",
        "table": "meter_reads",
        "type": "column",
      },
    },
    Object {
      "name": "mpan",
      "type": Object {
        "column": "mpan",
        "schema": "public",
        "table": "meters",
        "type": "column",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert complex sql tariff-rates.sql: tariff-rates.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;
